# chessie

./: .gitignore  Cargo.toml  README.md  build.rs
chessie/: Cargo.toml  README.md  build.rs
chessie/benches/: perft.rs
chessie/examples/: perft.rs  perftbench.rs  splitperft.rs
chessie/src/: game.rs  lib.rs  movegen.rs  moves.rs  perft.rs  position.rs  zobrist.rs
chessie/tests/: perft.rs
chessie_types/: Cargo.toml  README.md
chessie_types/src/: bitboard.rs  lib.rs  piece.rs  square.rs  utils.rs
src/: game.rs  lib.rs  moves.rs  perft.rs  prng.rs
tests/: movegen.rs  perft.rs
types/: Cargo.toml
types/src/: bitboard.rs  lib.rs  piece.rs  square.rs  utils.rs
